// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`'use client' directive > throws and error when the directive is not at the top of the file and doesn't modify the program 1`] = `
"export default a;
"use client";
"
`;

exports[`'use client' directive > throws and error when there is no directive and doesn't modify the program 1`] = `
"export default a;
"
`;

exports[`'use client' directive > transforms when the directive is found at the top of the file or after other directives 1`] = `
"import {registerClientReference as $$registerClientReference$$} from "react-just";
"use strict";
const $$Ref$$default = $$registerClientReference$$("default");
export {$$Ref$$default as default};
"
`;
